fixed spacing between components

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -78,7 +78,7 @@ textarea {
     }
 
     .contact_header {
-        margin-top:  32rem;
+        margin-top:  39rem;
     }
 
   
