--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -58,6 +58,10 @@
    .experience_content {
     padding: 1rem;
    }
+
+   .experience_header {
+    margin-top: 15rem;
+   }
 }
     
   
