--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -64,6 +64,10 @@
    .services {
     height: auto;
    }
+
+   .services_header {
+    margin-top: 48rem;
+   }
 }
 
      
